--- a/style.css
+++ b/style.css
@@ -53,11 +53,15 @@ button:hover {
     display: none;
 }
 
-.table-container {
+#table,
+#instructions {
     background-color: #000;
     padding: 20px;
     border: 2px solid #fff;
     border-radius: 10px;
+}
+
+.table-container {
     max-height: 100px;
     overflow-y: auto;
 }
@@ -81,6 +85,15 @@ h2 {
 
 .scoreboard th {
     background-color: #555;
+}
+
+#instructions ul {
+    list-style: none;
+    padding: 0;
+}
+
+#instructions li {
+    margin-bottom: 10px;
 }
 
 #data {
