--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: #000;
     color: #fff;
-    font-family: 'Press Start 2P', cursive;
+    font-family: 'Aptos Display';
     text-align: center;
     display: flex;
     flex-direction: column;
